[gd_scene load_steps=6 format=3 uid="uid://c2n46r1w6lur2"]

[ext_resource type="Script" path="res://Game Over/game_over.gd" id="1_5oqo5"]
[ext_resource type="Texture2D" uid="uid://cbaicf0ouv8w1" path="res://Assets/Background/background_prlx_1.png" id="2_ijgkp"]
[ext_resource type="Texture2D" uid="uid://dilix4p72d4fj" path="res://Assets/Background/background_prlx_2.png" id="3_ix46l"]
[ext_resource type="FontFile" uid="uid://prrtsjm0hg3m" path="res://Assets/Game Fonts/Pixel Font/PressStart2P.ttf" id="4_sae61"]
[ext_resource type="Texture2D" uid="uid://4wr1w5u5l22e" path="res://Assets/Buttons/select_button.png" id="5_yunhx"]

[node name="GameOver" type="Node2D"]
script = ExtResource("1_5oqo5")

[node name="SkyBg" type="Sprite2D" parent="."]
position = Vector2(575, 323)
scale = Vector2(2.32661, 2.375)
texture = ExtResource("2_ijgkp")

[node name="CloudsBg" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(2.32258, 2.38235)
texture = ExtResource("3_ix46l")

[node name="Label" type="Label" parent="."]
offset_top = 85.0
offset_right = 1152.0
offset_bottom = 219.0
theme_override_colors/font_color = Color(0.0470588, 0.0823529, 0.352941, 1)
theme_override_fonts/font = ExtResource("4_sae61")
theme_override_font_sizes/font_size = 100
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReplayButton" type="Button" parent="."]
offset_left = 250.0
offset_top = 400.0
offset_right = 540.0
offset_bottom = 490.0

[node name="Sprite2D" type="Sprite2D" parent="ReplayButton"]
position = Vector2(145, 44.5)
scale = Vector2(0.420601, 0.413043)
texture = ExtResource("5_yunhx")

[node name="Label" type="Label" parent="ReplayButton"]
layout_mode = 0
offset_left = -1.0
offset_top = -2.0
offset_right = 292.0
offset_bottom = 92.0
theme_override_fonts/font = ExtResource("4_sae61")
theme_override_font_sizes/font_size = 20
text = "Replay"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="."]
offset_left = 580.0
offset_top = 400.0
offset_right = 870.0
offset_bottom = 490.0
text = "Main Menu"

[node name="Sprite2D" type="Sprite2D" parent="MenuButton"]
position = Vector2(144.5, 45)
scale = Vector2(0.422031, 0.408696)
texture = ExtResource("5_yunhx")

[node name="Label" type="Label" parent="MenuButton"]
layout_mode = 0
offset_left = -2.0
offset_top = -1.0
offset_right = 292.0
offset_bottom = 92.0
theme_override_fonts/font = ExtResource("4_sae61")
theme_override_font_sizes/font_size = 20
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="ReplayButton" to="." method="_on_replay_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_main_menu_button_pressed"]
